fixed some layout problems

--- a/styles.css
+++ b/styles.css
@@ -159,13 +159,13 @@ body {
   align-items: center;
   width: 500px;
   height: 500px;
-  height: 50%;
+  height: 60%;
   background-color: #f6bd21;
   border: 2px solid #000;
   box-shadow: 2px 2px 10px #000;
   border-radius: 4rem;
   position: absolute;
-  top: 50%;
+  top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 999;
